// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<nav
  className="sc-gA-DJDv cAmVeO"
>
  <a
    className="sc-ksWjrO kSPgqB"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-cuQNSp sc-jwYuju ivFoxT dKCwSY"
  >
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#2"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#4"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#5"
      >
        Future
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders HorizontalVariants 1`] = `
Array [
  <nav
    className="sc-gA-DJDv cAmVeO"
  >
    <a
      className="sc-ksWjrO kSPgqB"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-cuQNSp sc-jwYuju ivFoxT dKCwSY"
    >
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>,
  <nav
    className="sc-gA-DJDv cAmVeO"
  >
    <a
      className="sc-ksWjrO kSPgqB"
      href="#nav-test-id-2"
    >
      Skip to content
    </a>
    <ul
      className="sc-cuQNSp sc-jwYuju ivFoxT dKCwSY"
    >
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-frlyyo ePAnix"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-2"
    />
  </nav>,
  <nav
    className="sc-gA-DJDv eHnLUo"
  >
    <a
      className="sc-ksWjrO kSPgqB"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-cuQNSp sc-jwYuju ivFoxT frjcne"
    >
      <li
        className="sc-frlyyo hngLEo active"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-frlyyo hngLEo"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-frlyyo hngLEo"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-frlyyo hngLEo"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-frlyyo hngLEo"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-frlyyo hngLEo"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-frlyyo hngLEo"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>,
]
`;

exports[`Tabs renders Small 1`] = `
<nav
  className="sc-gA-DJDv cAmVeO"
>
  <a
    className="sc-ksWjrO kSPgqB"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-cuQNSp sc-jwYuju ivFoxT dKCwSY"
  >
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT dUjYCo"
        href="#2"
        size="small"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT dUjYCo"
        href="#3"
        size="small"
      >
        Today
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT dUjYCo"
        href="#4"
        size="small"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT dUjYCo"
        href="#5"
        size="small"
      >
        Future
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT dUjYCo"
        href="#6"
        size="small"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT dUjYCo"
        href="#7"
        size="small"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT dUjYCo"
        href="#8"
        size="small"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders Variant 1`] = `
<nav
  className="sc-gA-DJDv cAmVeO"
>
  <a
    className="sc-ksWjrO kSPgqB"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-cuQNSp sc-jwYuju ivFoxT dKCwSY"
  >
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#2"
      >
        Featured
        <span
          className="sc-WJksd jmittI"
        >
          00
        </span>
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#4"
      >
        <div
          className="sc-gRFyCy gXcHYy"
        >
          <svg
            className="sc-dvwKko"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
              stroke="currentColor"
            />
          </svg>
        </div>
        Tomorrow
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#5"
      >
        <div
          className="sc-gRFyCy gXcHYy"
        >
          <svg
            className="sc-dvwKko"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
              stroke="currentColor"
            />
          </svg>
        </div>
        Future
        <span
          className="sc-WJksd jmittI"
        >
          00
        </span>
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-frlyyo ePAnix"
      onClick={[Function]}
    >
      <a
        className="sc-jLOYlT hIiJfh"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders VerticalVariants 1`] = `
<div
  className="flex flex-row justify-around items-end w-full gap-2"
>
  <nav
    className="sc-gA-DJDv cXLaha"
  >
    <a
      className="sc-ksWjrO kSPgqB"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-cuQNSp sc-jwYuju ivFoxT dKCwSY"
    >
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT hIiJfh"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT hIiJfh"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT hIiJfh"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT hIiJfh"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT hIiJfh"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT hIiJfh"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT hIiJfh"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
  <nav
    className="sc-gA-DJDv saotD"
  >
    <a
      className="sc-ksWjrO kSPgqB"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-cuQNSp sc-jwYuju ivFoxT dKCwSY"
    >
      <li
        className="sc-frlyyo itkWHn"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-frlyyo itkWHn"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-frlyyo itkWHn"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-frlyyo itkWHn"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-frlyyo itkWHn"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-frlyyo itkWHn"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-frlyyo itkWHn"
        onClick={[Function]}
      >
        <a
          className="sc-jLOYlT gehdCA"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
  <nav
    className="sc-gA-DJDv cXLaha"
  >
    <a
      className="sc-ksWjrO kSPgqB"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-cuQNSp sc-jwYuju ivFoxT dKCwSY"
    >
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-frlyyo hhOqxv"
        onClick={[Function]}
      >
        <a
          className="sc-jrVuhE cITKZl tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
</div>
`;
